fix notelist dark mode change color flash

--- a/main/static/scss/notelistsection.scss
+++ b/main/static/scss/notelistsection.scss
@@ -44,6 +44,7 @@ body {
       flex-basis: 32%;
       
       transition: 
+          background 0.3s ease,
           outline 0.3s ease,
           transform 0.1s ease-out,
           box-shadow 0.1s ease, 
